# Parallelism

Homework1/: CMakeLists.txt  Homework.cpp  README.md
Homework2/Lab1/: CMakeLists.txt  matrix_vector.cpp
Homework2/Lab2/: CMakeLists.txt  integrate.cpp
Homework2/Lab3/: CMakeLists.txt  simple_iteration.cpp
